--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="robots" content="index, follow"> 
         <meta name="description" content="landing page of the startup">
         <meta title="Start Up">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link href="normalize.css" rel="stylesheet" type="text/css"> 
         <link href="style.css" rel="stylesheet" type="text/css"> 
