--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="robots" content="index, follow"> 
         <meta name="description" content="landing page of the startup">
         <meta title="Start Up">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link href="normalize.css" rel="stylesheet" type="text/css"> 
         <link href="style.css" rel="stylesheet" type="text/css"> 
@@ -23,7 +24,7 @@
 <body>
 <div class="wrapper">
     
-      <a href="#home" class="go-up"><i class="arrow up"></i></a>
+ <!--     <a href="#home" class="go-up"><i class="arrow up"></i></a>-->
        
      <!-- HEADER !-->
     <a name="home"></a>
