--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <div class="wrapper">
     
- <!--     <a href="#home" class="go-up"><i class="arrow up"></i></a>-->
+<a href="#home" class="go-up"><i class="arrow up"></i></a>
        
      <!-- HEADER !-->
     <a name="home"></a>
